# airflow-poc

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  airflow  airflow-docker-compose.yaml  airflow.Dockerfile  pyproject.toml
